# jetpm

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs  utils.rs  welcome.rs
src/commands/: info.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  run.rs  uninstall.rs  use.rs  use_cmd.rs
src/core/: mod.rs  package_json.rs  resolve.rs  rewrite.rs
